<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright 2019 Georgios Trantzas

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

                http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.

-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/keys_dialog_main_title"
        style="@style/keys_dialog_main_title"
        android:text="Bluetooth keys" />


    <GridLayout

        android:id="@+id/dialog_grid_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/keys_dialog_main_title"
        android:columnCount="2"
        android:orientation="horizontal"
        android:rowCount="5">

        <TextView

            style="@style/keys_dialog_field_title"
            android:text="@string/keys_dialog_forward_title" />

        <EditText
            android:id="@+id/keys_dialog_forward_key_edit_text"
            style="@style/keys_dialog_edit_text"
            android:hint="@string/keys_dialog_forward_hint" />

        <TextView

            style="@style/keys_dialog_field_title"
            android:text="@string/keys_dialog_reverse_title" />

        <EditText

            android:id="@+id/keys_dialog_reverse_key_edit_text"
            style="@style/keys_dialog_edit_text"
            android:hint="@string/keys_dialog_reverse_hint" />

        <TextView

            style="@style/keys_dialog_field_title"
            android:text="@string/keys_dialog_left_title" />

        <EditText

            android:id="@+id/keys_dialog_left_key_edit_text"
            style="@style/keys_dialog_edit_text"
            android:hint="@string/keys_dialog_left_hint" />

        <TextView

            style="@style/keys_dialog_field_title"
            android:text="@string/keys_dialog_right_title" />

        <EditText

            android:id="@+id/keys_dialog_right_key_edit_text"
            style="@style/keys_dialog_edit_text"
            android:hint="@string/keys_dialog_right_title" />

        <TextView

            style="@style/keys_dialog_field_title"
            android:text="@string/keys_dialog_brake_title" />

        <EditText

            android:id="@+id/keys_dialog_brake_key_edit_text"
            style="@style/keys_dialog_edit_text"
            android:hint="@string/keys_dialog_brake_title" />

    </GridLayout>

    <Button

        android:id="@+id/keys_dialog_save_button"
        style="@style/keys_dialog_save_button"
        android:text="@string/keys_dialog_save_button" />

</RelativeLayout>