<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright 2019 Georgios Trantzas

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

                http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.

-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context="com.gmail.giwrgostrantzas.arduinorc.MainActivity">

    <ImageView

        style="@style/main_activity_main_image"
        android:src="@drawable/no_bluetooth_icon" />

    <TextView

        style="@style/main_activity_connection_message"
        android:text="@string/main_activity_connection_message" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button

            android:id="@+id/main_activity_paired_devices_button"
            style="@style/main_activity_navigation_buttons"
            android:text="@string/main_activity_paired_devices_button" />

        <View

            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#8599a0" />

        <Button

            android:id="@+id/main_activity_about_button"
            style="@style/main_activity_navigation_buttons"
            android:text="@string/main_activity_about_button" />

    </LinearLayout>

</LinearLayout>